<resources>
    <string name="app_name">facebook</string>
    <string name="facebook">Facebook</string>
    <string name="num">Numéro de telephone ou email</string>
    <string name="pw">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_pass_oubli">Mot de pass oublié?</string>
    <string name="compte">Créer un compte</string>
    <string name="aide">Aide</string>
    <string name="quitter">Quitter</string>
    <string name="error">"L'email et le mot de passe ne peuvent pas être vides."</string>


</resources>